Added pi side daemon to vcs, minor changes to firmware

--- a/firmware/makefile
+++ b/firmware/makefile
@@ -1,5 +1,6 @@
 PRG            = pi-j1850-interface
 OBJ            = main.o spi.o j1850.o
+DEST		   = ./build
 MCU_TARGET     = atmega328p
 OPTIMIZE       = -O3
 DEFS           = 
@@ -13,12 +14,9 @@ OBJCOPY        = avr-objcopy
 OBJDUMP        = avr-objdump
 all: $(PRG).elf lst text eeprom fuse
 $(PRG).elf: $(OBJ)
-	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^ $(LIBS)
-# dependency:
-demo.o: demo.c iocompat.h
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $(DEST)/$@ $^ $(LIBS)
 clean:
-	rm -rf *.o $(PRG).elf *.eps *.png *.pdf *.bak 
-	rm -rf *.lst *.map $(EXTRA_CLEAN_FILES)
+	rm -rf $(DEST)/*
 lst:  $(PRG).lst
 %.lst: %.elf
 	$(OBJDUMP) -h -S $< > $@
@@ -61,20 +59,6 @@ srec: $(PRG)_fuse.srec
 	$(OBJCOPY) -j .fuse -j .data -O srec $< $@
 %_fuse.bin: %.elf
 	$(OBJCOPY) -j .fuse -j .data -O binary $< $@
-# Every thing below here is used by avr-libc's build system and can be ignored
-# by the casual user.
-FIG2DEV                 = fig2dev
-EXTRA_CLEAN_FILES       = *.hex *.bin *.srec
-dox: eps png pdf
-eps: $(PRG).eps
-png: $(PRG).png
-pdf: $(PRG).pdf
-%.eps: %.fig
-	$(FIG2DEV) -L eps $< $@
-%.pdf: %.fig
-	$(FIG2DEV) -L pdf $< $@
-%.png: %.fig
-	$(FIG2DEV) -L png $< $@
 flash:
 	sudo systemctl stop spi.service
 	sudo avrdude -c linuxspi -p m328p -P /dev/spidev0.0 -b 100000 -U flash:w:$(PRG).hex -U lfuse:w:0xD2:m -U hfuse:w:0xd9:m -U efuse:w:0xff:m
