--- a/firmware/makefile
+++ b/firmware/makefile
@@ -1,65 +1,71 @@
 PRG            = pi-j1850-interface
 OBJ            = main.o spi.o j1850.o
-DEST		   = ./build
+DEST		   = build
 MCU_TARGET     = atmega328p
 OPTIMIZE       = -O3
-DEFS           = 
-LIBS           = 
 # You should not have to change anything below here.
 CC             = avr-gcc
 # Override is only needed by avr-lib build system.
-override CFLAGS        = -g -Wall -g $(OPTIMIZE) -mmcu=$(MCU_TARGET) $(DEFS)
-override LDFLAGS       = -Wl,-Map,$(PRG).map
+override CFLAGS        = -Wall $(OPTIMIZE) -mmcu=$(MCU_TARGET)
+override LDFLAGS       = -mmcu=$(MCU_TARGET) -Wl,-Map,$(DEST)/$(PRG).map
 OBJCOPY        = avr-objcopy
 OBJDUMP        = avr-objdump
-all: $(PRG).elf lst text eeprom fuse
-$(PRG).elf: $(OBJ)
-	$(CC) $(CFLAGS) $(LDFLAGS) -o $(DEST)/$@ $^ $(LIBS)
+all: $(DEST)/$(PRG).elf lst text fuse
+
+$(patsubst %.o,$(DEST)/%.o,$(OBJ)): $(patsubst %.o,%.c,$(OBJ))
+	$(CC) $(CFLAGS) -o $@ -c $(patsubst build/%.o,%.c,$@)
+	
+$(DEST)/$(PRG).elf: $(patsubst %.o,$(DEST)/%.o,$(OBJ))
+	$(CC) $(LDFLAGS) -o $@ $^
+	avr-size -C --mcu=$(MCU_TARGET) $@
+	
 clean:
 	rm -rf $(DEST)/*
-lst:  $(PRG).lst
-%.lst: %.elf
+lst:  $(DEST)/$(PRG).lst
+
+$(DEST)/%.lst: $(DEST)/%.elf
 	$(OBJDUMP) -h -S $< > $@
+	
 # Rules for building the .text rom images
 text: hex
 #bin srec
-hex:  $(PRG).hex
-bin:  $(PRG).bin
-srec: $(PRG).srec
-%.hex: %.elf
+hex:  $(DEST)/$(PRG).hex
+bin:  $(DEST)/$(PRG).bin
+srec: $(DEST)/$(PRG).srec
+$(DEST)/%.hex: $(DEST)/%.elf
 	$(OBJCOPY) -j .text -j .data -O ihex $< $@
-%.srec: %.elf
+$(DEST)/%.srec: $(DEST)/%.elf
 	$(OBJCOPY) -j .text -j .data -O srec $< $@
-%.bin: %.elf
+$(DEST)/%.bin: $(DEST)/%.elf
 	$(OBJCOPY) -j .text -j .data -O binary $< $@
 # Rules for building the .eeprom rom images
 eeprom: ehex
 #ebin esrec
-ehex:  $(PRG)_eeprom.hex
-ebin:  $(PRG)_eeprom.bin
-esrec: $(PRG)_eeprom.srec
-%_eeprom.hex: %.elf
+ehex:  $(DEST)/$(PRG)_eeprom.hex
+ebin:  $(DEST)/$(PRG)_eeprom.bin
+esrec: $(DEST)/$(PRG)_eeprom.srec
+$(DEST)/%_eeprom.hex: %.elf
 	$(OBJCOPY) -j .eeprom --change-section-lma .eeprom=0 -O ihex $< $@ \
 	|| { echo empty $@ not generated; exit 0; }
-%_eeprom.srec: %.elf
+$(DEST)/%_eeprom.srec: %.elf
 	$(OBJCOPY) -j .eeprom --change-section-lma .eeprom=0 -O srec $< $@ \
 	|| { echo empty $@ not generated; exit 0; }
-%_eeprom.bin: %.elf
+$(DEST)/%_eeprom.bin: %.elf
 	$(OBJCOPY) -j .eeprom --change-section-lma .eeprom=0 -O binary $< $@ \
 	|| { echo empty $@ not generated; exit 0; }
 # Rules for building the .fuse rom images
 fuse: hex bin
 #bin srec
-hex:  $(PRG)_fuse.hex
-bin:  $(PRG)_fuse.bin
-srec: $(PRG)_fuse.srec
-%_fuse.hex: %.elf
+hex:  $(DEST)/$(PRG)_fuse.hex
+bin:  $(DEST)/$(PRG)_fuse.bin
+srec: $(DEST)/$(PRG)_fuse.srec
+$(DEST)/%_fuse.hex: $(DEST)/%.elf
 	$(OBJCOPY) -j .fuse -j .data -O ihex $< $@
-%_fuse.srec: %.elf
+$(DEST)/%_fuse.srec: $(DEST)/%.elf
 	$(OBJCOPY) -j .fuse -j .data -O srec $< $@
-%_fuse.bin: %.elf
+$(DEST)/%_fuse.bin: $(DEST)/%.elf
 	$(OBJCOPY) -j .fuse -j .data -O binary $< $@
 flash:
 	sudo systemctl stop spi.service
-	sudo avrdude -c linuxspi -p m328p -P /dev/spidev0.0 -b 100000 -U flash:w:$(PRG).hex -U lfuse:w:0xD2:m -U hfuse:w:0xd9:m -U efuse:w:0xff:m
+	sudo avrdude -c linuxspi -p m328p -P /dev/spidev0.0 -b 100000 -U flash:w:$(DEST)/$(PRG).hex -U lfuse:w:0xD2:m -U hfuse:w:0xd9:m -U efuse:w:0xff:m
 #	sudo systemctl start spi.service
